Fri Jul 17 13:35:47 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (rsock_getfamily): return AF_UNSPEC if getsockname
	  is failed.  [ruby-core:24383]
 
Fri Jul 17 01:22:57 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (recursive_join): raise ArgumentError for joining
	  recursive array.

	* array.c (ary_join_1): ditto.

	* test/ruby/test_array.rb (TestArray#test_join2): test updated for
	  recursive join.

Thu Jul 16 23:32:16 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb,ext/tk/config_list.in: ignore paths which includes
	  white space characters on Windows.[ruby-dev:38794]

	* ext/tk/lib/tk.rb: works on Cygwin (limitation:: Tk.mainloop works on
	  the main thread only).

Thu Jul 16 20:58:18 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole.rb (test_s_codepage_changed,
	  test_s_locale_set, test_s_locale_change): skip test if Japanese
	  locale is not installed. [ruby-core:23806]
	
	* test/win32ole/test_win32ole_variant.rb (test_conversion_str2cy):
	  dito.

Thu Jul 16 19:02:28 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb (Socket.tcp_server_sockets_port0): servers
	  is nil if an error occurs before setting it.

Thu Jul 16 18:42:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_seed): suppress a warning.

Thu Jul 16 18:30:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_aset, recursive_hash): rejects recursive hash.
	  [ruby-core:22921]

Thu Jul 16 18:28:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id.c (Init_id), vm.c (vm_exec): @#__ThrowState__ is no longer
	  used.  [ruby-dev:38760]

Thu Jul 16 17:41:28 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_alias): fix a case which try non-existing method alias.

	* test/ruby/test_alias.rb: add a test.

Thu Jul 16 16:00:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen): discards read buffer.  [ruby-core:24240]
